--- a/PROJETO_REDUZIDO/index.html
+++ b/PROJETO_REDUZIDO/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>projeto-reduzido</title>
+    
+    <link rel="icon" type="image/png" href="/icons/reserva-icon.png" />
+
+    <link rel="stylesheet" href="/src/styles/global.css" />
+
+    <title>Reservas de Mesa | Sistema de Gerenciamento</title>
+    <meta name="description" content="Sistema simples e rápido para fazer reservas de mesa em restaurantes." />
+    <meta name="author" content="Equipe de Desenvolvimento" />
+    <meta name="theme-color" content="#c62828" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading"></div>
+    </div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
